--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join The Dots</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="game-container">
-        <div class="game-content">
-            <h1 class="title">Join The Dots</h1>
-            <div class="instructions">
-                <p>Instructions Instructions Instructions InstructionsInstructions Instructions</p>
-                <p>InstructionsInstructions</p>
-                <p>Instructions Instructions Instructions InstructionsInstructions Instructions</p>
-                <p>InstructionsInstructions</p>
-            </div>
-            <button class="start-button" onclick="window.location.href='level1.html'">START GAME</button>
+      <div class="game-content">
+        <h1 class="title">Join The Dots</h1>
+        <div class="instructions">
+          <p>
+            <b> Gameplay: </b><br />
+            a. Players draw lines to connect dots of the same color.<br />
+            b. Players can connect any two same-colored dots but must ultimately
+            achieve the target number of connections of the specified color
+            within the given time limit
+          </p>
+          <p>
+            <b>Rules: </b><br />
+            a. Only same-colored dots can be connected. <br />
+            b. Connections must be orthogonal (up, down, left, right); no
+            diagonal lines allowed.<br />
+            c. Lines cannot intersect or cross over other dots
+          </p>
         </div>
+        <button class="start-button" onclick="window.location.href='game.html'">
+          START GAME
+        </button>
+      </div>
     </div>
-</body>
+  </body>
 </html>
