--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
         <div class="instructions">
           <p>
             <b> Gameplay: </b><br />
-            a. Players draw lines to connect dots of the same color.<br />
-            b. Players can connect any two same-colored dots but must ultimately
-            achieve the target number of connections of the specified color
-            within the given time limit
+            a. Draw lines to connect dots of the same color<br />
+            <!-- b. Connect any same colored dots <br /> -->
+            b. Connect required number of dots of a given color within the time limit to complete the level
           </p>
           <p>
             <b>Rules: </b><br />
-            a. Only same-colored dots can be connected. <br />
-            b. Connections must be orthogonal (up, down, left, right); no
-            diagonal lines allowed.<br />
+            a. Connect dots of the same color only <br />
+            b. Connect orthogonally (up, down, left, right); no diagonals <br />
             c. Lines cannot intersect or cross over other dots
           </p>
         </div>
